# ckan-client-py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
ckan_sdk/: client.py  f11s.py
ckanclient/: __init__.py  auth.py  client.py  errors.py  f11s.py  text.py  upload.py
lib/: ckan_client.py  file.py
lib/util/: ckan_auth_api.py  ckan_upload_api.py
tests/: conftest.py  test_auth.py  test_ckan_auth_api.py  test_ckanclient.py  test_client.py  test_text.py  test_upload.py  test_uploader.py
tests/sample_file/: dailyprices.csv
tests/vcr/: test_create.yaml  test_do_blob_authz.yaml  test_get_jwt_token.yaml  test_push.yaml  test_push_blob.yaml  test_retrieve.yaml
